kube-jenkins/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.org/client-max-body-size: "10m"
spec:
  tls:
  - hosts:
    - build.nerdrack.com
    secretName: nerdrack-tls
  rules:
  - host: build.nerdrack.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
